--- a/netishr/reports.html
+++ b/netishr/reports.html
@@ -32,7 +32,7 @@
 
 <body>
     <div id="wrapper">
-                <nav class="navbar-default navbar-static-side" role="navigation">
+        <nav class="navbar-default navbar-static-side" role="navigation">
             <div class="sidebar-collapse">
                 <ul class="nav metismenu" id="side-menu">
                     <li class="nav-header">
@@ -362,6 +362,9 @@
                                 <li>
                                     <a href="index.html">Home</a>
                                 </li>
+                                <li>
+                                    <a href="administrator.html">Administrator</a>
+                                </li>
                                 <li class="active">
                                     <strong>Reports</strong>
                                 </li>
@@ -377,6 +380,19 @@
                             <div class="col-lg-4">
                                 <div class="ibox float-e-margins">
                                     <div class="ibox-title">
+                                        <h5 id="general">Recruitment</h5>
+                                    </div>
+                                    <div class="ibox-content">
+                                        <div><a href="recruitment_status.html">Recruitment Status</a>
+                                            <div class="small">Show the status of applicants and recruitments</div>
+                                        </div>
+                                        <p></p>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="col-lg-4">
+                                <div class="ibox float-e-margins">
+                                    <div class="ibox-title">
                                         <h5 id="general">Payroll</h5>
                                     </div>
                                     <div class="ibox-content">
@@ -386,8 +402,7 @@
                                         <p></p>
                                     </div>
                                 </div>
-                            </div>
-                            <div class="col-lg-4">
+
                             </div>
                             <div class="col-lg-4">
                             </div>
