--- a/netishr/persons_applicants_profile.html
+++ b/netishr/persons_applicants_profile.html
@@ -384,7 +384,16 @@
     									<div class="tabs-left">
                                             <ul class="nav nav-tabs">
                                                 <li class="active"><a data-toggle="tab" href="#tab-1"><i class="fa fa-user"></i> Main Information</a></li>
-                                                <li><a data-toggle="tab" href="#tab-2"><i class="fa fa-user"></i> Education Information(Notes: Termasuk additional Person information)</a></li>
+                                                <li><a data-toggle="tab" href="#tab-2"><i class="fa fa-user"></i> Contact Information</a></li>
+                                                <li><a data-toggle="tab" href="#tab-2"><i class="fa fa-user"></i> Payroll</a></li>
+                                                <li><a data-toggle="tab" href="#tab-2"><i class="fa fa-user"></i> Language</a></li>
+                                                <li><a data-toggle="tab" href="#tab-2"><i class="fa fa-user"></i> Education</a></li>
+                                                <li><a data-toggle="tab" href="#tab-2"><i class="fa fa-user"></i> Achievement</a></li>
+                                                <li><a data-toggle="tab" href="#tab-2"><i class="fa fa-user"></i> Organization</a></li>
+                                                <li><a data-toggle="tab" href="#tab-2"><i class="fa fa-user"></i> Family</a></li>
+                                                <li><a data-toggle="tab" href="#tab-2"><i class="fa fa-user"></i> Working Experience</a></li>
+                                                <li><a data-toggle="tab" href="#tab-2"><i class="fa fa-user"></i> Employment History</a></li>
+                                                <li><a data-toggle="tab" href="#tab-2"><i class="fa fa-user"></i> Application History</a></li>
                                             </ul>
 										<div class="tab-content ">
 											<div id="tab-1" class="tab-pane active">
