Updated NetisHR files

--- a/netishr/reports.html
+++ b/netishr/reports.html
@@ -383,7 +383,7 @@
                                         <h5 id="general">Recruitment</h5>
                                     </div>
                                     <div class="ibox-content">
-                                        <div><a href="recruitment_status.html">Recruitment Status</a>
+                                        <div><a href="report_recruitment_status.html">Recruitment Status</a>
                                             <div class="small">Show the status of applicants and recruitments</div>
                                         </div>
                                         <p></p>
@@ -402,9 +402,34 @@
                                         <p></p>
                                     </div>
                                 </div>
-
                             </div>
                             <div class="col-lg-4">
+                                <div class="ibox float-e-margins">
+                                    <div class="ibox-title">
+                                        <h5 id="general">Personnel</h5>
+                                    </div>
+                                    <div class="ibox-content">
+                                        <div><a href="report_attendance_work.html">Attendance and work</a>
+                                            <div class="small">Attendance and work report</div>
+                                        </div>
+                                        <p></p>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="row">
+                            <div class="col-lg-4">
+                                <div class="ibox float-e-margins">
+                                    <div class="ibox-title">
+                                        <h5 id="general">Training</h5>
+                                    </div>
+                                    <div class="ibox-content">
+                                        <div><a href="report_training_history.html">Training History</a>
+                                            <div class="small">Show the history of each training</div>
+                                        </div>
+                                        <p></p>
+                                    </div>
+                                </div>
                             </div>
                         </div>
                     </div>
