Updated NetisHR files

--- a/netishr/administrator.html
+++ b/netishr/administrator.html
@@ -14,7 +14,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
 
-    <title>NetisHR</title>
+    <title>NetisHR | Admnistrator</title>
 
     <link href="css/bootstrap.min.css" rel="stylesheet">
     <link href="font-awesome/css/font-awesome.css" rel="stylesheet">
@@ -32,7 +32,7 @@
 
 <body>
     <div id="wrapper">
-                <nav class="navbar-default navbar-static-side" role="navigation">
+        <nav class="navbar-default navbar-static-side" role="navigation">
             <div class="sidebar-collapse">
                 <ul class="nav metismenu" id="side-menu">
                     <li class="nav-header">
@@ -357,13 +357,13 @@
                 <div class="col-lg-12">
                     <div class="row wrapper border-bottom white-bg page-heading">
                         <div class="col-lg-10">
-                            <h2>Settings</h2>
+                            <h2>Administrator</h2>
                             <ol class="breadcrumb">
                                 <li>
                                     <a href="index.html">Home</a>
                                 </li>
                                 <li class="active">
-                                    <strong>Settings</strong>
+                                    <strong>Administrator</strong>
                                 </li>
                             </ol>
                         </div>
@@ -395,6 +395,10 @@
                                         <div>
                                             <a href="reports.html">Reports</a>
                                             <div class="small">Various Reports</div>
+                                        </div>
+                                        <div>
+                                            <a href="exportimport.html">Export/Import</a>
+                                            <div class="small">Export and import of data</div>
                                         </div>
 
                                     </div>
@@ -562,8 +566,8 @@
                                             <div class="small">Create payslip with payslip items</div>
                                         </div>
                                         <p></p>
-                                        <div><a href="administrator_remuneration_payassignment.html">Payset/payslip assignment</a>
-                                            <div class="small">Assign pay set and payslip to a person</div>
+                                        <div><a href="administrator_remuneration_payassignment.html">Pay assignment</a>
+                                            <div class="small">Assign pay set and pay slip to a person</div>
                                         </div>
                                         <p></p>
                                         <div><a href="uploadpayrollspecification.html">Upload Payroll Specification</a>
